<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="hello">Hello World, MainActivity!</string>
	<string name="app_name">迷你账本</string>
	<string name="accountname_title">名称</string>
	<string name="accountamount_title">金额</string>
	<string	name="accounttime_title">时间</string>
	<string	name="browse_no_accounts">没有账目记录，从现在开始吧，养成良好的理财习惯！</string>
  <string name="browse_no_items">没有记录！</string>
  <string name="total_foot">共计收入：{0} 共计支出：{1} 余额：{2}</string>
   <string name="edit_itemname">收支项：</string>
  <string name="edit_amount">金    额：</string>
  <string name="edit_time">时    间：</string>
  <string name="edit_type">类    型：</string>
  <string name="edit_remark">备注：</string>
  <string name="confirm">保存</string>
  <string name="cancel">取消</string>
  <string name="edit_amountitem">编辑</string>
  <string name="shouru">收入</string>
  <string name="zhichu">支出</string>
   
   <string name="yeart">年统计:</string>
   <string name="montht">月统计:</string>
   <string name="zidingyi">自定义:</string>
   <string name="month">月份</string>
   <string name="yue">余额</string>
   <string name="search">查询</string>
   <string name="show_menu">显示范围</string>
   <string name="cur_month">当前月</string>
   <string name="cur_year">当前年</string>
   <string name="cur_all">全部</string>  
   
  <string-array name="yeararray">
	  <item>2010</item>
	  <item>2011</item>
	  <item>2012</item>
    <item>2013</item>
    <item>2014</item>
    <item>2015</item>
    <item>2016</item>
    <item>2017</item>
    <item>2018</item>
    <item>2019</item>
    <item>2020</item>
  </string-array>
  <string name="website">个人主页</string>
  <string name="url">http://ninggy.iteye.com</string>
  <string name="ABOUT_TITLE">StrongMoney\n迷你账本</string>
  <string name="ABOUT_MESSAGE">
 \t迷你账本-主要用来记录日常的一些收支情况，目前提供一些简单的统计功能，让使用者可以根据以往的开支情况合理的对日常生活开支做出预算，养成良好的理财习惯。。\n
\n
版权所有 © 2011-2012\n
开发者: Lubee.Ning\n
保留所有的权利。\n
详情访问个人空间\n{url}
    </string>
</resources>
