<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/list_bg"
	android:orientation="vertical">
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/title_bg"
		android:orientation="horizontal">
		<TextView
			android:id="@+id/name_title"
			android:layout_width="140dip"
			android:text="@string/accountname_title"
			android:gravity="center|center_vertical"
			android:textColor="#3C3C3C"
			android:layout_height="wrap_content"
			android:textSize="15sp">
		</TextView>
		<TextView
			android:id="@+id/amount_title"
			android:layout_width="100dip"
			android:textColor="#3C3C3C"
			android:text="@string/accountamount_title"
			android:layout_height="wrap_content"
			android:gravity="center|center_vertical"
			android:textSize="15sp">
		</TextView>
	</LinearLayout>
	<ListView
		android:id="@+id/s_list"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:cacheColorHint="#00000000"
		android:layout_weight="1"
		android:scrollbars="vertical" />
	<TextView
		android:id="@+id/s_empty"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:text="@string/browse_no_accounts"
		android:padding="10px"
		android:visibility="gone" />

	<TextView
		android:id="@+id/s_foot"
		android:background="@drawable/title_bg"
		android:layout_width="fill_parent"
		android:text="@string/total_foot"
		android:gravity="right|center_vertical"
		android:paddingRight="5dip"
		android:textColor="#3C3C3C"
		android:layout_height="wrap_content"
		android:textSize="13sp">
	</TextView>
</LinearLayout>
