<?xml version="1.0" encoding="utf-8"?>
<!-- 这里是根节点布局  -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent">

<!--  第一个Tab 对应的布局  -->
    <LinearLayout android:id="@+id/acount_layout"
        android:layout_width="fill_parent" android:layout_height="fill_parent"
        android:orientation="vertical" >
          <LinearLayout
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:background="@drawable/title_bg"
				    android:orientation="horizontal">
				    <TextView
				      android:id="@+id/name_title"
				      android:layout_width="140dip"
				      android:text="@string/accountname_title"
				      android:gravity="center|center_vertical"
				        android:textColor="#3C3C3C"
				      android:layout_height="wrap_content"
				      android:textSize="15sp">
				    </TextView>
				     <TextView
				      android:id="@+id/amount_title"
				      android:layout_width="80dip"
				        android:textColor="#3C3C3C"
				      android:text="@string/accountamount_title"
				      android:layout_height="wrap_content"
				      android:gravity="center|center_vertical"
				      android:textSize="15sp">
				    </TextView>
				     <TextView
				      android:id="@+id/time_title"
				      android:layout_width="fill_parent"
				        android:textColor="#3C3C3C"
				      android:text="@string/accounttime_title"
				      android:gravity="center|center_vertical"
				      android:layout_height="wrap_content"
				      android:textSize="15sp">
				    </TextView>
				  </LinearLayout>
         <ListView 
           android:id="@+id/list"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:background="@drawable/list_bg"
           android:cacheColorHint="#00000000"
           android:layout_weight="1"
           android:scrollbars="vertical"/>
         <TextView 
           android:id="@+id/browse_empty"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:text="@string/browse_no_accounts"
           android:padding="10px" 
           android:visibility="gone"/>

            <TextView
              android:id="@+id/name_foot"
               android:background="@drawable/title_bg"
              android:layout_width="fill_parent"
              android:text="@string/total_foot"
              android:gravity="right|center_vertical"
              android:paddingRight="5dip"
              android:textColor="#3C3C3C"
              android:layout_height="wrap_content"
              android:textSize="13sp">
            </TextView>
  
    </LinearLayout>
<!--  第二个Tab 对应的布局  -->
    <LinearLayout android:id="@+id/statistics_layout"
        android:layout_width="fill_parent" android:layout_height="fill_parent"
        android:orientation="vertical"  >
        <AnalogClock android:id="@+id/widget36"
            android:layout_width="wrap_content" android:layout_height="wrap_content">
        </AnalogClock>
    </LinearLayout>
<!--  第三个Tab 对应的布局  -->
    <LinearLayout android:id="@+id/item_layout"
        android:layout_width="fill_parent" android:layout_height="fill_parent"
        android:orientation="vertical">
         <ListView 
           android:id="@+id/itemlist"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:background="@drawable/list_bg"
           android:cacheColorHint="#00000000"
           android:layout_weight="1"
           android:scrollbars="vertical"/>
          <TextView 
           android:id="@+id/ibrowse_empty"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:text="@string/browse_no_items"
           android:padding="10px" 
           android:visibility="gone"/>
    </LinearLayout>
</FrameLayout>